[tool.poetry]
name = "echo-bot"
version = "0.1.0"
description = ""
authors = ["hjmr <2620990+hjmr@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "echo_bot"}]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^2.2.2"
line-bot-sdk = "^2.3.0"
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
