[tool.poetry]
name = "echo-bot"
version = "0.1.0"
description = ""
authors = ["hjmr <2620990+hjmr@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "echo_bot"}]

[tool.poetry.dependencies]
python = "^3.11"
line-bot-sdk = "^3.5.0"
flask = "^3.0.0"
gunicorn = "^21.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
